# asr-skill

./: .gitignore  LICENSE  README.md  idea.md  pyproject.toml
.claude/: settings.local.json
.claude-plugin/: plugin.json
.claude/skills/asr/: README.md  SKILL.md
.claude/skills/asr/references/: output-formats.md
.claude/skills/asr/scripts/: transcribe.py
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
.planning/phases/01-core-asr-pipeline/: 01-01-SUMMARY.md  01-02-SUMMARY.md  01-03-SUMMARY.md  01-04-SUMMARY.md  01-CONTEXT.md  01-PLAN.md  01-RESEARCH.md  01-VERIFICATION.md  02-PLAN.md  03-PLAN.md  04-PLAN.md
.planning/phases/02-speaker-diarization/: 02-01-PLAN.md  02-01-SUMMARY.md  02-02-PLAN.md  02-02-SUMMARY.md  02-03-PLAN.md  02-03-SUMMARY.md  02-04-PLAN.md  02-CONTEXT.md  02-RESEARCH.md
.planning/phases/03-enhanced-outputs/: 03-01-PLAN.md  03-01-SUMMARY.md  03-02-PLAN.md  03-02-SUMMARY.md  03-03-PLAN.md  03-RESEARCH.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
asr_skill/: __init__.py  cli.py
asr_skill/core/: __init__.py  device.py  models.py  pipeline.py
asr_skill/postprocessing/: __init__.py  formatters.py  speakers.py
asr_skill/preprocessing/: __init__.py  audio.py  video.py
asr_skill/utils/: __init__.py  paths.py
scripts/: package_skill.py
skills/asr/: SKILL.md
skills/asr/scripts/: transcribe.py
